--- a/package.json
+++ b/package.json
@@ -10,8 +10,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "1.12.1",
+    "@react-native-community/netinfo": "6.0.0",
+    "axios": "0.21.1",
+    "lodash": "4.17.21",
+    "memoizee": "0.4.15",
+    "moment": "2.29.1",
+    "native-base": "2.15.2",
+    "prop-types": "15.7.2",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-gesture-handler": "1.10.3",
+    "react-native-simple-toast": "1.1.3",
+    "react-native-vector-icons": "8.1.0",
+    "react-redux": "7.2.2",
+    "redux": "4.0.5",
+    "redux-persist": "6.0.0",
+    "redux-saga": "1.1.3",
+    "remote-redux-devtools": "0.5.16"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
