--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "1.12.1",
+    "@react-native-community/checkbox": "0.5.7",
     "@react-native-community/netinfo": "6.0.0",
     "axios": "0.21.1",
     "lodash": "4.17.21",
